--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-    
+    <div class="hero container">
+        <div class="hero--info">
+            <h2>Маленький заголовок</h2>
+            <h1>Большой заголовок пау пау пау</h1>
+            <p>Писать о себе слишком скучно, добро пожаловать на страницу моих любимых анекдотов</p>
+            <img src="/img/silence.jpg" alt="">
+    </div>
 </body>
 </html>
