--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Super krutoy site</title>
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
@@ -13,6 +13,7 @@
             <h1>Большой заголовок пау пау пау</h1>
             <p>Писать о себе слишком скучно, добро пожаловать на страницу моих любимых анекдотов</p>
             <img src="/img/silence.jpg" alt="">
+            
     </div>
 </body>
 </html>
