--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
             <img src="/img/silence.jpg" alt="">
             
     </div>
+    <div class="light"></div>
+    <script src="/js/script.js"></script>
+
+
 </body>
 </html>
