--- a/index.html
+++ b/index.html
@@ -18,6 +18,58 @@
     <div class="light"></div>
     <script src="/js/script.js"></script>
 
+    <div class="jokes">
+        <div class="joke1">
+            <h2>Joke №1</h2>
+            <p>Придя в первый раз в гей клуб я подбросил монету: выпадет решка - буду участвовать в групповухе, орёл - нет. И знаете че мне выпало? Прямая кишка</p>
+        </div>
+
+        <div class="joke2">
+            <h2>Joke №2</h2>
+            <p>Почему не существует обзоров на наркотики? Отсутствуют независимые эксперты</p>
+        </div>
+
+        <div class="joke3">
+            <h2>Joke №3</h2>
+            <p>У бабушки было два кота и чтобы не перепутать где какой, одного она назвала Барсик, а второго утопила</p>
+        </div>
+
+        <div class="joke4">
+            <h2>Joke №4</h2>
+            <p>Что общего между проктологом и человеком, разбирающимся в современной эстраде? Шарят в попе</p>
+        </div>
+
+        <div class="joke5">
+            <h2>Joke №5</h2>
+            <p>Как чернокожая женщина понимает, что беременна? Достаёт тампон, а хлопок собран</p>
+        </div>
+
+        <div class="joke6">
+            <h2>Joke №6</h2>
+            <p>Что можно делать на медосмотре в Хогвартсе? Калдавать</p>
+        </div>
+
+        <div class="joke7">
+            <h2>Joke №7</h2>
+            <p>Что маленькое, чёрное и в стекло бьётся? Ребёнок в духовке</p>
+        </div>
+
+        <div class="joke8">
+            <h2>Joke №8</h2>
+            <p>На похоронах карлика оптимиста гроб был наполовину полон</p>
+        </div>
+
+        <div class="joke9">
+            <h2>Joke №9</h2>
+            <p>Почему учёные изучили мировой океан всего на 5%? Потому что бездари ебаные</p>
+        </div>
+
+        <div class="joke10">
+            <h2>Joke №10</h2>
+            <p>Близорукий человек дристанул дальше, чем видел</p>
+        </div>
+
+    </div>
 
 </body>
 </html>
